--- a/show.html
+++ b/show.html
@@ -21,8 +21,8 @@
       </div>
       <div class='header row bg_primary'>
           <div class="site_logo_wrapper col-6">
-              <img src='holcim_logo_white.svg' style="width: 109px;"/>
-          </div>
+            <a href = 'index.html'><img src="holcim_logo_white.svg" style="width: 109px;" /></a>
+        </div>
 
           <!-- Add the search container with input and icon -->
           <div class="search-container col-6">
