--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Meta tags and stylesheets as in your code -->
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="bootstrap.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css" crossorigin="anonymous" />
     <style>
-      /* Add styles for the install button */
-      #install-button {
-        display: none; /* Initially hide the install button */
+      /* Define button container styles */
+      .button-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 67vh;
+        width: 80%;
+        margin: auto;
+        }
+
+      /* Define button styles */
+      .custom-button {
+        background-color: #005836; /* Initial background color */
+        color: white; /* Text color */
+        border: none; /* Remove the border */
+        padding: 10px 20px; /* Padding for the button */
+        cursor: pointer; /* Change cursor to pointer on hover */
+        transition: background-color 0.3s; /* Transition for background color */
+        width: 100%; /* Make the buttons take up 100% width of the container */
+        margin-bottom: 10px; /* Add some space between buttons */
+      }
+
+      /* Hover effect */
+      .custom-button:hover {
+        background-color: white; /* Change background color to white on hover */
+        color: #005836; /* Change text color to the original color on hover */
       }
     </style>
   </head>
@@ -14,7 +42,7 @@
     <div class="container">
       <div class="header row bg_primary">
         <div class="site_logo_wrapper col-6">
-          <img src="holcim_logo_white.svg" style="width: 109px;" />
+          <a href = 'index.html'><img src="holcim_logo_white.svg" style="width: 109px;" /></a>
         </div>
       </div>
       <div class="row">
@@ -45,6 +73,7 @@
             <button
               id="install-button"
               class="custom-button"
+              style="display: none;"
               onclick="installPWA()"
             >
               Install App
