--- a/index.html
+++ b/index.html
@@ -9,34 +9,47 @@
     <link rel="stylesheet" href="style.css" crossorigin="anonymous" />
     <style>
       /* Define button container styles */
+      body {
+          background: linear-gradient(92deg, #1197ba, #4df6f7);
+      }
+
       .button-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 67vh;
-        width: 80%;
-        margin: auto;
-        }
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          height: 67vh;
+          width: 80%;
+          margin: auto;
+      }
 
       /* Define button styles */
       .custom-button {
-        background-color: #005836; /* Initial background color */
-        color: white; /* Text color */
-        border: none; /* Remove the border */
-        padding: 10px 20px; /* Padding for the button */
-        cursor: pointer; /* Change cursor to pointer on hover */
-        transition: background-color 0.3s; /* Transition for background color */
-        width: 100%; /* Make the buttons take up 100% width of the container */
-        margin-bottom: 10px; /* Add some space between buttons */
+          background-color: #ffffff;
+          color: black;
+          font-weight: bold;
+          border-radius: 37px;
+          border: none;
+          padding: 10px 20px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+          width: 100%;
+          margin-bottom: 10px;
       }
 
-      /* Hover effect */
-      .custom-button:hover {
-        background-color: white; /* Change background color to white on hover */
-        color: #005836; /* Change text color to the original color on hover */
+      .logo-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 20px;
+    position: absolute;
+    bottom: 27px;
+}
+      /* Logo styles */
+      .logo {
+          width: 109px;
       }
-    </style>
+  </style>
   </head>
   <body>
     <div class="container">
@@ -78,6 +91,9 @@
             >
               Install App
             </button>
+            <div class="logo-container">
+              <img src='holcim_logo.svg' class="logo" />
+          </div>
           </div>
         </div>
       </div>
